# cui

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  Readme.md  emcc.sh  emccd.sh
cmake/: CMakeLists.txt
cmake/compiler/: clang.cmake  gcc.cmake  msvc.cmake
cmake/modules/: GroupSources.cmake
dep/: CMakeLists.txt
dep/adafruit/: CMakeLists.txt
dep/adafruit/polyfill/: Arduino.h  Print.h
dep/fmt/: CMakeLists.txt
dep/glbinding/: CMakeLists.txt
dep/glfw/: CMakeLists.txt
dep/imgui/: CMakeLists.txt
dep/nativefiledialog/: CMakeLists.txt
dep/wasm3/: CMakeLists.txt
doc/: preamble.hpp
examples/: CMakeLists.txt
examples/wasm-basic/: CMakeLists.txt  main.cpp
examples/wasm-bitmap/: CMakeLists.txt  main.cpp
examples/wasm-bitmap2/: CMakeLists.txt  main.cpp
examples/wasm-buffer/: CMakeLists.txt  main.cpp
examples/wasm-info/: CMakeLists.txt  main.cpp
examples/wasm-minimal/: CMakeLists.txt  main.cpp
include/cui/: cui.hpp  fwd.hpp
include/cui/component/: animation.hpp  drop.hpp  hook.hpp  input.hpp  mount.hpp  ref.hpp
include/cui/component/detail/: unpack_impl.hpp
include/cui/core/: access.hpp  algorithm.hpp  canvas.hpp  color.hpp  component.hpp  def.hpp  draw.hpp  floating.hpp  math.hpp  node.hpp  paint.hpp  pipeline.hpp  rect.hpp  size.hpp  surface.hpp  traverse.hpp  vector.hpp
include/cui/core/detail/: algorithm_impl.hpp  pipeline_impl.hpp
include/cui/support/: graphviz.hpp  naming.hpp  pretty.hpp  tracer.hpp
include/cui/surface/: composite.hpp  null.hpp  raster.hpp  vm.hpp
include/cui/surface/composite/: composite.hpp
include/cui/surface/null/: null.hpp
include/cui/surface/raster/: raster.hpp
include/cui/surface/vm/: host.hpp  interop.hpp  rt.cpp  rt.h
include/cui/util/: assert.hpp  casting.hpp  common.h  functional.hpp  iterator.hpp  meta.hpp  span.hpp  type.hpp  type_name.hpp  type_of.hpp
include/cui/util/detail/: type_name_impl.hpp  type_of_impl.hpp
include/cui/widget/: align.hpp  bitmap.hpp  button.hpp  center.hpp  clock.hpp  example.hpp  fill.hpp  inplace.hpp  padding.hpp  text.hpp
include/viewer/: backend.hpp  viewer.hpp
lib/: CMakeLists.txt
lib/cui/: CMakeLists.txt  pch.cpp  pch.hpp
lib/cui/component/: animation.cpp  drop.cpp  input.cpp  mount.cpp  ref.cpp
lib/cui/core/: algorithm.cpp  canvas.cpp  draw.cpp  node.cpp  paint.cpp  surface.cpp  traverse.cpp
lib/cui/core/detail/: for_each.hpp
lib/cui/support/: graphviz.cpp  naming.cpp  pretty.cpp  tracer.cpp
lib/cui/support/detail/: printable.hpp
lib/cui/surface/null/: null.cpp
lib/cui/surface/raster/: raster.cpp
lib/cui/surface/vm/: host.cpp
lib/cui/widget/: align.cpp  bitmap.cpp  button.cpp  center.cpp  clock.cpp  fill.cpp  padding.cpp  text.cpp
lib/unity/: CMakeLists.txt  unity.cpp
lib/viewer/: CMakeLists.txt  backend.cpp  backend_raster.cpp  color_palette.hpp  pch.hpp  viewer.cpp
lib/wasm/: noalloc.cpp
test/: CMakeLists.txt
test/m3-check/: CMakeLists.txt  main.cpp
test/unit/: CMakeLists.txt  test-components.cpp  test-hooks.cpp  test-position.cpp
test/wasm-simple/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt
tools/main/: CMakeLists.txt  main.cpp
tools/playground/: CMakeLists.txt  main.cpp
tools/vm/: CMakeLists.txt  main.cpp
