set(BUILD_SHARED_LIBS OFF)
set(OPTION_SELF_CONTAINED OFF)
set(OPTION_BUILD_TESTS OFF)
set(OPTION_BUILD_DOCS OFF)
set(OPTION_BUILD_EXAMPLES OFF)
set(OPTION_BUILD_TOOLS OFF)
set(OPTION_BUILD_WITH_BOOST_THREAD OFF)
set(OPTION_BUILD_CHECK OFF)
set(OPTION_BUILD_OWN_KHR_HEADERS OFF)
set(OPTION_BUILD_WITH_LTO OFF)

add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/glbinding" EXCLUDE_FROM_ALL)

set_target_properties(glbinding PROPERTIES FOLDER "dep")
